<resources>
    <string name="app_name">ToDo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title:</string>
    <string name="add_a_title">add a title</string>
    <string name="description">Description:</string>
    <string name="write_a_description">Write a description</string>
    <string name="add">add</string>
    <string name="sample_description">Sample Description</string>
    <string name="adding_date">Adding Date</string>
    <string name="no_item_in_list">No Task In ToDo List</string>
    <string name="todo">ToDo</string>
    <string name="inprogress">InProgress</string>
    <string name="done">Done</string>
    <string name="update">UPDATE</string>
    <string name="no_item_in_inprogress_list">No Task in InProgress List</string>
    <string name="no_item_in_done_list">No Item in Done List</string>
    <string name="title_">Title</string>
</resources>